# epsg-utils-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pages-demo.yml  test.yml
generate-definitions/: Cargo.toml
generate-definitions/src/: main.rs
src/: chunked_definitions.rs  crs.rs  error.rs  lib.rs  parser.rs  projjson_definitions.rs  projjson_reader.rs  projjson_writer.rs  projjson_writer_tests.rs  wkt2.rs  wkt2_definitions.rs  wkt2_writer.rs  wkt2_writer_tests.rs
src/parser/: crs.rs  cs.rs  datum.rs  metadata.rs  mod.rs  projection.rs  tests.rs  unit.rs
src/projjson/: mod.rs  reader.rs  tests.rs  writer.rs
src/wkt2/: mod.rs  tests.rs  writer.rs
src/wkt2/parser/: crs.rs  cs.rs  datum.rs  metadata.rs  mod.rs  projection.rs  tests.rs  unit.rs
web/: index.html  main.js  styles.css
web/wasm/: Cargo.toml
web/wasm/src/: lib.rs
