[workspace]
members = [".", "generate-definitions"]

[package]
name = "epsg-utils"
version = "0.0.1"
edition = "2024"

[features]
default = ["wkt2-definitions", "projjson-definitions"]
wkt2-definitions = ["dep:flate2"]
projjson-definitions = ["dep:flate2"]

[dependencies]
flate2 = { version = "1.1.9", optional = true }
serde_json = "1"
