[workspace]
members = [".", "generate-definitions"]

[package]
name = "epsg-utils"
description = "Parse/convert EPSG code, WKT2, and PROJJSON"
version = "0.0.0"
edition = "2024"
authors = ["Hiroaki Yutani"]
license = "MIT"
repository = "https://github.com/yutannihilation/epsg-utils-rs/"
include = ["src/**", "Cargo.toml", "README.md", "CHANGELOG.md"]

[features]
default = ["wkt2-definitions", "projjson-definitions"]
wkt2-definitions = ["dep:flate2"]
projjson-definitions = ["dep:flate2"]

[dependencies]
flate2 = { version = "1.1.9", optional = true }
serde_json = "1"
