[workspace]
members = [".", "generate-definitions", "web/wasm"]

[package]
name = "epsg-utils"
description = "Parse/convert EPSG code, WKT2, and PROJJSON"
version = "0.0.1"
edition = "2024"
authors = ["Hiroaki Yutani"]
license = "MIT"
repository = "https://github.com/yutannihilation/epsg-utils-rs/"
include = ["src/**", "Cargo.toml", "README.md", "CHANGELOG.md"]

[features]
default = ["wkt2-definitions", "projjson-definitions"]
wkt2-definitions = ["dep:flate2"]
projjson-definitions = ["dep:flate2"]

[dependencies]
flate2 = { version = "1.1.9", optional = true }
serde_json = "1"

[package.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "v{{version}}", min = 1 },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n## [Unreleased] (ReleaseDate)\n", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/yutannihilation/epsg-utils-rs/compare/{{tag_name}}...HEAD", exactly = 1 },
]
